# country_monitor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
country_monitor/: __init__.py  manage.py
country_monitor/apps/country/: admin.py  apps.py  urls.py
country_monitor/apps/tasks/: celery_app.py  tasks.py
country_monitor/config/: asgi.py  settings.py  urls.py  wsgi.py
deployment/docker/: Dockerfile
src/: __init__.py  celerybeat-schedule  manage.py
src/apps/country/: admin.py  apps.py  models.py  serializer.py  services.py  urls.py  views.py
src/apps/country/migrations/: 0001_initial.py
src/apps/tasks/: celery_app.py  tasks.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/utils/: custom_response.py
